# partis-pyproj

./: .gitignore  README.md  README.rst  make_dists.py  noxfile.py  pyproject.toml  releases.md
.github/workflows/: linux.yaml  macos.yaml  python-package.yml  python-publish.yml  tests.yaml  windows.yaml
doc/: __main__.py  backend.rst  conf.py  entrypoints.rst  index.rst
doc/src/: backend.rst  build.rst  build_base.rst  build_bdist.rst  build_dist.rst  build_sdist.rst  build_targz.rst  build_zip.rst  dist_file.rst  index.rst  meson.rst  norms.rst  pkginfo.rst  pyproj.rst  validate.rst
doc/userguide/: index.rst
docs/: distribution.rst  index.rst  validate.rst
docs/source/: partis.pyproj.rst
pkgaux/: base_requirements.txt  dev_requirements.txt  doc_requirements.txt  test_requirements.txt  utils.py
src/pyproj/: __init__.py  _incremental.py  _legacy_setup.py  _nonprintable.py  _norms.py  backend.py  build.py  build_base.py  build_bdist.py  build_dummy.py  build_sdist.py  build_targz.py  build_zip.py  file.py  file_pattern.py  legacy.py  load_module.py  meson.py  norms.py  pep.py  pkginfo.py  pptoml.py  pyproj.py  template.py  valid.py  validate.py
src/pyproj/_vendor/: README
src/pyproj/build_dist/: __init__.py  build_base.py  build_bdist.py  build_dummy.py  build_sdist.py  build_targz.py  build_zip.py
src/pyproj/builder/: __init__.py  builder.py  cargo.py  cmake.py  download.py  meson.py  process.py
src/pyproj/cli/: __main__.py  init_pyproj.py
src/pyproj/dist_file/: __init__.py  dist_base.py  dist_binary.py  dist_copy.py  dist_source.py  dist_targz.py  dist_zip.py
src/pyproj/path/: __init__.py  match.py  pattern.py  scandir.py  utils.py
test/: noxfile.py  test_00_validate.py  test_01_norms.py  test_02_file.py  test_02_file_pattern.py  test_02_path.py  test_03_load_module.py  test_03_template.py  test_05_load_module.py  test_05_pyproj.py  test_06_pkginfo.py  test_06_pyproj.py  test_08_backend.py  test_dist.py  test_norms.py  test_pkginfo.py  test_pyproj.py
test/pkg_bad_1/: pyproject.toml
test/pkg_bad_2/: pyproject.toml
test/pkg_bad_3/: pyproject.toml
test/pkg_bad_4/: pyproject.toml
test/pkg_bad_4/pkgaux/: __init__.py
test/pkg_bad_5/: pyproject.toml
test/pkg_bad_5/pkgaux/: __init__.py
test/pkg_base/: pyproject.toml
test/pkg_base/aux/: __init__.py
test/pkg_cmake_1/: CMakeLists.txt  pyproject.toml
test/pkg_cmake_1/src/test_pkg/: plat_mod.c
test/pkg_meson/: meson.build  pyproject.toml
test/pkg_meson/aux/: __init__.py
test/pkg_meson_1/: meson_options.txt  pyproject.toml
test/pkg_meson_2/: pyproject.toml
test/pkg_meson_bad_1/: bad_link  pyproject.toml
test/pkg_meson_bad_1/src/test_pkg/: plat_mod.pyx
test/pkg_min/: pyproject.toml
test/pkg_tmpl/: pyproject.toml
tests/: test_00_validate.py  test_01_norms.py  test_02_path.py  test_03_template.py  test_04_dist.py  test_04_pptoml.py  test_05_dist.py  test_07_pkginfo.py  test_07_pyproj.py  test_08_pyproj.py  test_10_dist_iter.py  test_11_tail_and_process.py  test_12_download.py  test_13_template_extra.py  test_14_cli_init.py  test_14_editable.py
tests/cov_sitecustom/: pyproject.toml
tests/pkg_bad_1/: pyproject.toml
tests/pkg_bad_2/: pyproject.toml
tests/pkg_bad_2/pkgaux/: __init__.py
tests/pkg_bad_3/: pyproject.toml
tests/pkg_bad_4/: pyproject.toml
tests/pkg_bad_5/: pyproject.toml
tests/pkg_base/: pyproject.toml
tests/pkg_base/pkgaux/: __init__.py
tests/pkg_base/src/test_pkg/pure_mod/: pure_mod.py
tests/pkg_base/src/test_pkg/sub_mod/: ok_link_dir
tests/pkg_base/src/test_pkg/sub_mod/sub_sub_mod/: ok_link.py
tests/pkg_cmake_1/: CMakeLists.txt  pyproject.toml
tests/pkg_meson_1/: meson_options.txt  pyproject.toml
tests/pkg_meson_2/: pyproject.toml
tests/pkg_meson_bad_1/: pyproject.toml
