# -*- coding: UTF-8 -*-
#++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++#
#                                                                              #
#                       OOOOOOOOO---------------OOOOOOOOO                      #
#                       OOOOO-----------------------OOOOO                      #
#                       OOO-------------------NNNN----OOO                      #
#                       O--------------------NNNNNN-----O                      #
#                       O----------NN--------NNN-NNN----O                      #
#                       ---------NNNNNNN-----NNN--NNN----                      #
#                       ---------NNNNNNNNN---NNN---NNNNNN                      #
#                       NNNNNN---NNN---NNNNNNNNN---------                      #
#                       ----NNN--NNN-----NNNNNN----------                      #
#                       O----NNN-NNN--------NN----------O                      #
#                       O-----NNNNNN--------------------O                      #
#                       OOO----NNNN-------------------OOO                      #
#                       OOOOO-----------------------OOOOO                      #
#                       OOOOOOOOO---------------OOOOOOOOO                      #
#                                                                              #
#                                Nanohmics, Inc.                               #
#                                                                              #
#++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++#

[project]
name = "partis-pyproj"
version = "0.0.1"
authors = [
  { name = "Nanohmics Inc.", email = "software.support@nanohmics.com" } ]
description = "Minimal set of PEP-517 compliant Python project build and distribution utilities"

requires-python = ">= 3.6.2"
dependencies = []

#+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
# Build and distribution configuration
#+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
[build-system]
requires = []
build-backend = "pyproj.backend"
backend-path = [ 'src' ]

#+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
[tool.partis.pyproj.dist.any]

ignore = [
  '__pycache__',
  '*.py[cod]',
  '*.so',
  '*.egg-info' ]

#+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
[tool.partis.pyproj.dist.source]

copy = [
  'src',
  'pyproject.toml' ]

#+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
[tool.partis.pyproj.dist.binary]

copy = [
  { src = 'src/pyproj', dst = 'partis/pyproj' } ]

top_level = [ 'partis' ]
