# -*- coding: UTF-8 -*-
#++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++#
#                                                                              #
#                       OOOOOOOOO---------------OOOOOOOOO                      #
#                       OOOOO-----------------------OOOOO                      #
#                       OOO-------------------NNNN----OOO                      #
#                       O--------------------NNNNNN-----O                      #
#                       O----------NN--------NNN-NNN----O                      #
#                       ---------NNNNNNN-----NNN--NNN----                      #
#                       ---------NNNNNNNNN---NNN---NNNNNN                      #
#                       NNNNNN---NNN---NNNNNNNNN---------                      #
#                       ----NNN--NNN-----NNNNNN----------                      #
#                       O----NNN-NNN--------NN----------O                      #
#                       O-----NNNNNN--------------------O                      #
#                       OOO----NNNN-------------------OOO                      #
#                       OOOOO-----------------------OOOOO                      #
#                       OOOOOOOOO---------------OOOOOOOOO                      #
#                                                                              #
#                                Nanohmics, Inc.                               #
#                                                                              #
#++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++#

[project]
name = "partis-pyproj"
version = "0.0.1"
description = "Minimal set of Python project utilities (PEP-517/621)"

requires-python = ">= 3.6.2"
dependencies = [
  "packaging == 21.3",
  "tomli >= 1.2.3" ]

[[project.authors]]
name = "Nanohmics Inc."
email = "software.support@nanohmics.com"

#+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
# Build and distribution configuration
#+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
[build-system]
requires = [
  "packaging == 21.3",
  "tomli >= 1.2.3" ]

build-backend = "pyproj.backend"
backend-path = [ 'src' ]

#-------------------------------------------------------------------------------
[tool.pyproj.dist]

ignore = [
  '__pycache__',
  '*.py[cod]',
  '*.so',
  '*.egg-info',
  '.nox',
  'doc/_build',
  'doc/.nox' ]
#...............................................................................
[tool.pyproj.dist.source]

copy = [
  'src',
  'doc',
  'test',
  'pyproject.toml' ]

# adds support for legacy 'setup.py'
add_legacy_setup = true

#...............................................................................
[tool.pyproj.dist.binary]

copy = [
  { src = 'src/pyproj', dst = 'partis/pyproj' } ]

top_level = [ 'partis' ]
