# -*- coding: UTF-8 -*-
[project]
# dynamic = [ "version" ]
name = "test_pkg_bad_4"
description = "Test Package"

requires-python = ">= 3.6.2"
dependencies = [ ]

#+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
[[project.authors]]
name = "Nanohmics Inc."
email = "software.support@nanohmics.com"

#+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
# Build and distribution configuration
#+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
[build-system]
requires = [
  "partis-pyproj == 0.0.1"]

build-backend = "partis.pyproj.backend"

#...............................................................................
[tool.pyproj.config]
opt_a = 1
opt_b = ["xyz", "abc"]
opt_c = false
opt_d = 0.0

#...............................................................................
[tool.pyproj.prep]
entry = "aux:prep"

#...............................................................................
[tool.pyproj.dist.prep]
entry = "aux:dist_prep"

#...............................................................................
[tool.pyproj.dist.source.prep]
entry = "aux:dist_source_prep"

#...............................................................................
[tool.pyproj.dist.source]
add_legacy_setup = true

copy = [
  'src',
  'aux',
  'pyproject.toml' ]

#...............................................................................
[tool.pyproj.dist.binary]
ignore = [ ]

#...............................................................................
[tool.pyproj.dist.binary.prep]
entry = "aux:dist_binary_prep"
