# -*- coding: UTF-8 -*-
[project]
dynamic = [ "version" ]
name = "test_pkg_bad_5"
description = "Test Package"

requires-python = ">= 3.6.2"
dependencies = [ ]

#+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
[[project.authors]]
name = "Nanohmics Inc."
email = "software.support@nanohmics.com"

#+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
# Build and distribution configuration
#+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
[build-system]
requires = [
  "partis-pyproj == 0.0.1"]

build-backend = "partis.pyproj.backend"

#...............................................................................
[tool.pyproj.dist.source]
copy = [
  'aux',
  'src',
  'pyproject.toml' ]

#...............................................................................
[tool.pyproj.prep]
entry = "aux:prep"

#...............................................................................
[tool.pyproj.dist.prep]
entry = "aux:dist_prep"

#...............................................................................
[tool.pyproj.dist.source.prep]
entry = "aux:dist_source_prep"

#...............................................................................
[[tool.pyproj.dist.binary.purelib.copy]]
src = 'src/test_pkg/pure_mod'
dst = 'test_pkg_bad_5/pure_mod'
