# -*- coding: UTF-8 -*-
[project]
name = "test_pkg"
version = "0.0.1"
description = "Test Package"

requires-python = ">= 3.6.2"
dependencies = [ ]

#+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
[[project.authors]]
name = "Nanohmics Inc."
email = "software.support@nanohmics.com"

#+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
# Build and distribution configuration
#+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
[build-system]
requires = [
  "partis-pyproj== 0.0.1"]

build-backend = "partis.pyproj.backend"

#...............................................................................
[tool.pyproj.dist.prep]
entry = "aux:dist_prep"

#...............................................................................
[tool.pyproj.dist.source.prep]
entry = "aux:dist_source_prep"

#...............................................................................
[tool.pyproj.dist.source]

copy = [
  'src',
  'aux',
  'pyproject.toml' ]

#...............................................................................
[tool.pyproj.dist.binary]
ignore = [ ]

#...............................................................................
[tool.pyproj.dist.binary.prep]
entry = "aux:dist_binary_prep"

#...............................................................................
[tool.pyproj.dist.binary.purelib]

copy = [
  { src = 'src/test_pkg/pure_mod.py', dst = 'test_pkg/pure_mod.py' } ]
